build_error.log
    Checking ranvier-runtime v0.14.3 (F:\project\ranvier\ranvier-workspace\ranvier\runtime)
error[E0599]: the method `execute` exists for reference `&Axon<In, Out, E, R>`, but its trait bounds were not satisfied
   --> runtime\src\testkit.rs:66:14
    |
 66 |         axon.execute(input, &self.resources, &mut self.bus).await
    |              ^^^^^^^ method cannot be called on `&Axon<In, Out, E, R>` due to unsatisfied trait bounds
    |
note: trait bound `E: std::fmt::Debug` was not satisfied
   --> runtime\src\axon.rs:149:15
    |
145 | impl<In, Out, E, Res> Axon<In, Out, E, Res>
    |                       ---------------------
...
149 |     E: Send + std::fmt::Debug + 'static,
    |               ^^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `execute`, perhaps you need to implement it:
            candidate #1: `hyper::rt::Executor`

warning: unused variable: `res_type`
   --> runtime\src\axon.rs:383:25
    |
383 |                     let res_type = std::any::type_name::<Res>()
    |                         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_res_type`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: future cannot be sent between threads safely
   --> runtime\src\axon.rs:371:17
    |
371 | /                 Box::pin(async move {
372 | |                     // Run previous step
373 | |                     let prev_result = prev(input, res, bus).await;
...   |
446 | |                     result
447 | |                 })
    | |__________________^ future created by async block is not `Send`
    |
note: future is not `Send` as this value is used across an await
   --> runtime\src\axon.rs:433:63
    |
415 |                     if let Outcome::Fault(ref err) = result {
    |                                           ------- has type `&E` which is not `Send`
...
433 |                             let _ = comp.run(state, res, bus).await;
    |                                                               ^^^^^ await occurs here, with `ref err` maybe used later
    = note: required for the cast from `Pin<Box<{async block@runtime\src\axon.rs:371:26: 371:36}>>` to `Pin<Box<dyn std::future::Future<Output = Outcome<Next, E>> + Send>>`
help: consider further restricting type parameter `E` with trait `Sync`
    |
149 |     E: Send + std::fmt::Debug + 'static + std::marker::Sync,
    |                                         +++++++++++++++++++

For more information about this error, try `rustc --explain E0599`.
warning: `ranvier-runtime` (lib) generated 1 warning
error: could not compile `ranvier-runtime` (lib) due to 2 previous errors; 1 warning emitted
